--- a/fileflightplans/kml/templates/kml/index.html
+++ b/fileflightplans/kml/templates/kml/index.html
@@ -4,18 +4,50 @@
         {% load static %}
 
         <link rel="stylesheet" type="text/css" href="{% static 'kml/style.css' %}">
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Raleway">
+        <link rel="stylesheet" 
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" 
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+            crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <h1>
-            F*** Flight Plans Right Now and Right Here!
+            F*** Flight Plans!
         </h1>
+        <p>
+            Upload a .kml <a href="https://support.google.com/fusiontables/answer/171215?hl=en" target="_blank">file</a> with just the red bounds <a href="https://support.google.com/earth/answer/148072?hl=en" target="_blank">drawn</a>.
+        </p>
+        <p>
+            I'll give you a new .kml with the red bounds PLUS green and yellow based on your max flight speed.
+        </p>
+        <p>
+            Currently, only quadcopters are supported, but I plan to add fixed-wing.
+        </p>
+        <p>
+            <a href='properformat'>(Formatting guidelines...)</a>
+        </p>
         {% block content %}
         <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form }}
-            <input type="submit" value="OK">
+            <div class="form-group">
+                <table>
+                    {{ form.as_table }}
+                </table>
+                <input class="btn btn-primary" type="submit" value="Download New .kml">
+            </div>
         </form>
+        <div class="example container">
+            <div class="row">
+                <div class="col">
+                    <img class="img-fluid" src="{% static 'kml/img/before.png' %}" alt="Before Image"/>
+                </div>
+                <div class="col">
+                    <img class="img-fluid" src="{% static 'kml/img/after.png' %}" alt="After Image"/>
+                </div>
+            </div>
+        </div>
         {% endblock %}
     </body>
 </html>
