Minor text fixes

--- a/fileflightplans/kml/templates/kml/index.html
+++ b/fileflightplans/kml/templates/kml/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <h1>
-            F*** Flight Plans!
+            File Flight Plans!
         </h1>
         <p>
             Upload a .kml <a href="https://support.google.com/fusiontables/answer/171215?hl=en" target="_blank">file</a> with just the red bounds <a href="https://support.google.com/earth/answer/148072?hl=en" target="_blank">drawn</a>.
