--- a/kml/templates/kml/properformat.html
+++ b/kml/templates/kml/properformat.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <h1>
-            <a href="/">F*** Flight Plans... Properly!</a>
+            <a href="/">File Flight Plans... Properly!</a>
         </h1>
         <p>
             Hey! If you're seeing this, it means that you probably messed up your KML file somehow.
