Added primary logic for flight plan filing

--- a/flightplan/static/flightplan/style.css
+++ b/flightplan/static/flightplan/style.css
@@ -2,6 +2,10 @@
     font-family: 'Raleway', serif;
 }
 
+body {
+    background: black;
+}
+
 a, a:link, a:hover, a:active {
     color: rgb(212, 0, 255);
     text-align: center;
